--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,11 @@ body {
 }
 
 header {
-    background-color: #f8b400;
+    background-color: #009df8;
     color: white;
     padding: 10px 0;
     text-align: center;
+    position: relative;
 }
 
 nav ul {
@@ -26,6 +27,12 @@ nav ul li {
 nav ul li a {
     color: white;
     text-decoration: none;
+}
+
+.currency-selector {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 section {
@@ -44,22 +51,28 @@ section {
     height: auto;
 }
 
+.price {
+    font-size: 18px;
+    font-weight: bold;
+}
+
 form {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-form label, form input, form textarea {
+form label, form input, form textarea, form select {
     margin: 10px 0;
 }
 
 footer {
-    background-color: #f8b400;
+    background-color: #009df8;
     color: white;
     text-align: center;
     padding: 10px 0;
 }
+
 #checkout {
     padding: 20px;
     text-align: center;
